--- a/css/musik-dashboard.css
+++ b/css/musik-dashboard.css
@@ -1,9 +1,3 @@
-* {}
-
-a {
-  text-decoration: none;
-}
-
 h1 {
   font-size: 30px;
   color: #fff;
@@ -46,8 +40,8 @@ table {
 }
 
 .tbl-content select {
-  background-color: ;
-  background-color: #00000094;
+  background-color:
+    background-color #00000094;
   color: white;
 }
 
